########################################
#   - User guide:
#       https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#       https://setuptools.pypa.io/en/latest/userguide/quickstart.html
#       https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
########################################

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project-cikfinder"
version = "0.0.1"
dependencies = [
    #"requests",
    #"python-slugify"
]
authors = [{ name = "CredX.AI", email = "contact@credx.ai" }]
description = "EDGAR Utilities - CIK Finder"

#[tool.setuptools]
#package-dir = {"" = ""}

########################################
#   #snake-corp-magic-numbers/pyproject.toml
#
#   [build-system]
#   requires=["setuptools","setuptools-scm"]
#   build-backend="setuptools.build_meta"
#
#   [tool.setuptools.packages.find]
#   where=["."]
#   include=["snake_corp"]
#   namespaces=true
#
#   [project]
#   name="snake-corp-magic-numbers"
#   version="1.1.8"
#   description="Super Magic Secret Numbers for the Snake Corporation"
#   license={text="Snake Corp Software License Agreement"}
